fix for audio controls making page too wide on mobile

--- a/assets/css/musical.css
+++ b/assets/css/musical.css
@@ -4,6 +4,10 @@
     background-color: var(--lGray);
 }
 
+.card img {
+    object-fit: scale-down;
+}
+
 #pastWorks {
     margin-bottom: 200px;
 }
